# Q-POP-Modules

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  examples.html  formulation.html  genindex.html  index.html  input.html  objects.inv  prepare.html  python.html  run.html  search.html  searchindex.js  visualization.html
.github/workflows/: docs.yml
_sources/: index.md  prepare.md  run.md
_static/: documentation_options.js
docs/: conf.py  formulation.md  index.md  input.md  prepare.md  python.md  run.md  visualization.md
imt/: README.md  input.xml  qpop-imt.py
imt/examples/: input.xml  input_3d.xml  input_larger_tol.xml  input_test.xml
imt/imt-cpp/: CMakeLists.txt  README.md  VO2_2tdevice.cpp  VO2_2tdevice.ufl  imt_2tdevice.h  imt_2tdevice.ufl  input.h  main.cpp
imt/imt-cpp/examples/: input.xml
imt/imt-py/: README.md  VO2_Nit_EfficAdap_v4.py
src/imt-cpp/: VO2_2tdevice.cpp  VO2_2tdevice.h  VO2_2tdevice.ufl  input.h  input.xml  main.cpp
src/mit/: VO2_Nit_EfficAdap_v4.py
stash/imt-cpp/: .gitignore
